--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="jumbotron text-center">
-    <h1>LOGO</h1>
+    <img src="5ware letras negras.png" style="width:475px;height:150px;">
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -53,23 +53,22 @@
       </ul>
     </div>
   </nav>
+
 <br>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Columna 1</h3>
-        <p>Contenido...</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Columna 2</h3>
-        <p>Contenido...</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Columna 3</h3>
-        <p>Contenido...</p>
-      </div>
-    </div>
-  </div>
+
+  <h2>GEFORCE RTX 3090:</h2>
+  <p>Lorem ipsum dolor..</p>
+<br>
+<br>
+
+  <h2>AMD Ryzen 5000 basados en Zen 3:</h2>
+  <p>Lorem ipsum dolor..</p>
+<br>
+<br>
+
+  <h2>ROG STRIX Z490-E GAMING:</h2>
+  <p>Lorem ipsum dolor..</p>
+
 
   <div id="demo" class="carousel slide" data-ride="carousel">
 
