--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="dropdown-item" href="#">Microprocesadores</a>
             <a class="dropdown-item" href="#">Tarjeta Gráfica</a>
             <a class="dropdown-item" href="https://hugoolivar.github.io/Placas%20Base.html">Placa Base</a>
-            <a class="dropdown-item" href="#">RAM</a>
+            <a class="dropdown-item" href="https://as.com/">RAM</a>
             <a class="dropdown-item" href="#">Fuente de Alimentacion</a>
           </div>
         </li>
