--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Microprocesadores</a>
             <a class="dropdown-item" href="#">Tarjeta Gráfica</a>
-            <a class="dropdown-item" href="https://hugoolivar.github.io/Placas%20Base.html">Placa Base</a>
-            <a class="dropdown-item" href="https://as.com/">RAM</a>
+            <a class="dropdown-item" href="Placas Base.html">Placa Base</a>
+            <a class="dropdown-item" href="#">RAM</a>
             <a class="dropdown-item" href="#">Fuente de Alimentacion</a>
           </div>
         </li>
