--- a/placabase.html
+++ b/placabase.html
@@ -1,10 +1,101 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Placas base</title>
-  </head>
-  <body>
-    Placa Base
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+  <title>PlacasBase</title>
+</head>
+<body>
+  
+  
+  <div class="jumbotron text-center">
+    <img src="5ware letras negras.png" style="width:475px;height:150px;">
+  </div>
+
+<br>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">5WARE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Noticias</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Montados
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Gaming</a>
+            <a class="dropdown-item" href="#">Oficina</a>
+            <a class="dropdown-item" href="#">Modelado 3D</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Componentes
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Microprocesadores</a>
+            <a class="dropdown-item" href="#">Tarjeta Gráfica</a>
+            <a class="dropdown-item" href="Page2.html">Placa Base</a>
+            <a class="dropdown-item" href="#">RAM</a>
+            <a class="dropdown-item" href="#">Fuente de Alimentacion</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+<br>
+<br>
+<h1>PLACAS BASE </h1>
+<br>
+<p>En este artículo de placas base vamos a hablar un poco de dos placas base en específico, con el socket AM4, es decir, una para procesadores AMD y otra placa con LGA 1151 para procesadores Intel. </br>
+  Pero antes de nada un pequeño repaso a las placas base. </br>
+  ¿Que es una placa base? Una placa base o placa madre es uno de los componentes principales de un ordenador, es una PCB con un circuito impreso la cual tiene diversos componentes para hacer funcionar tu ordenador.
+  En la placa base se conectan todos los demás componentes como el microprocesador, la tarjeta gráfica o los discos duros para que todo funcione todo conectado entre sí. </br>
+  </p>
+<br>
+<br>
+<br>
+<h1>MSI B450 Gaming Plus MAX
+</h1>
+<br>
+<br>
+<p>La primera placa base de la que vamos a hablar es la MSI B450 Gaming Plus MAX. Es una placa para procesadores con AM4 es decir procesadores de AMD. </br>
+  Esta placa base, ahora mismo es una de las mejores relación calidad precio del mercado, es de clase ATX. Como ya hemos nombrado es una placa con el socket AM4 y un chipset B450 de AMD, de ahí su nombre.
+  Esta placa tiene conectores USB 3.2 GEN2 para la mayor velocidad de tus periféricos y 6 puertos USB 2.0 extras. </br>
+  Tiene 4 ranuras DIMM DDR4 con una frecuencia de hasta 4133 Mhz OC, una muy alta frecuencia perfecta para sacar mas FPS en videojuegos. </br>
+  Tiene PCI-E 3.0 que es compatible con tarjetas gráficas como las de la serie 2000 de Nvidia perfectas para gaming y trabajos de modelado 3D. </br>
+  
+  Esta placa base es una placa perfecta para gaming para el precio que tiene, este ronda los 97€, teniendo en cuenta que está preparada para procesadores de gama media y gama alta, es un precio muy asequible. </br>
+  </p>
+<br>
+<br>
+<br>
+<h1>Asus Prime B365M-A</h1>
+<br>
+<br>
+<p>La segunda placa de la que vamos ha hablar es la Asus Prime B365M-A. </br>
+  Estas placas de ASUS Prime 300 Series, proporcionan la base sólida necesaria para su primera construcción, además de flexibilidad para crecer con sus ambiciones. </br>
+  Esta placa se caracteriza por tener un socket de procesador LGA 1151 (Zócalo H4). </br>
+  Además acepta hasta procesadores de novena generación y la Bios es muy sencilla y muy completa. </br>
+  Tiene como tipos de memoria compatibles: DDR4-SDRAM, y un factor de forma micro ATX, también incorpora puerto USB tipo-c y varias entradas sata para ssd o hdd. </br>
+  
+  Y por último, esta placa base ahora mismo se encuentra en el mercado por 77,98€, viendo que es una placa homework, networking, station y gaming, su precio es bastante bueno. </br>
+  </p>
+
+
+
+</body>
 </html>
