--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Microprocesadores</a>
             <a class="dropdown-item" href="#">Tarjeta Gráfica</a>
-            <a class="dropdown-item" href="https://hugoolivar.github.io/placabase.html">Placa Base</a>
+            <a class="dropdown-item" href="HugoOlivaR.github.io/placabase.html">Placa Base</a>
             <a class="dropdown-item" href="https://hugoolivar.github.io/ram.html">RAM</a>
             <a class="dropdown-item" href="#">Fuente de Alimentacion</a>
           </div>
