--- a/placabase.html
+++ b/placabase.html
@@ -17,14 +17,14 @@
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">5WARE</a>
+    <a class="navbar-brand" href="HugoOlivaR.github.io">5WARE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="HugoOlivaR.github.io">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Noticias</a>
@@ -46,8 +46,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Microprocesadores</a>
             <a class="dropdown-item" href="#">Tarjeta Gráfica</a>
-            <a class="dropdown-item" href="#">Placa Base</a>
-            <a class="dropdown-item" href="#">RAM</a>
+            <a class="dropdown-item" href="placabase.html">Placa Base</a>
+            <a class="dropdown-item" href="ram.html">RAM</a>
             <a class="dropdown-item" href="#">Fuente de Alimentacion</a>
           </div>
         </li>
