--- a/placabase.html
+++ b/placabase.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="https://hugoolivar.github.io/">Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://as.com/">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Noticias</a>
