--- a/ram.html
+++ b/ram.html
@@ -73,7 +73,7 @@
 <br>
     <p>
       La primera característica de la memoria RAM es la velocidad, esta se mide en Mhz, por ejemplo una memoria de 3000Mhz sería capaz de realizar 3000 millones de operaciones en un segundo. A mayor velocidad, menor va a ser el tiempo que va a tardar en realizar las operaciones.
-      Los tipos de RAM es la característica más importante que hay que tener en cuenta, si el tipo de RAM no coincide con el que acepta la placa base, no podrá encajar. Hoy en dia los tipos de RAM más usados son DDR3 y DDR4, siendo este ultimo mas moderno y eficiente
+      Los tipos de RAM es la característica más importante que hay que tener en cuenta, si el tipo de RAM no coincide con el que acepta la placa base, no podrá encajar. Hoy en dia los tipos de RAM más usados son DDR3 y DDR4, siendo este ultimo mas moderno y eficiente.
 
     </p>
 
